--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,8 @@ add_executable(ex0201 src/ex0201.cpp)
 add_executable(ex0202 src/ex0202.cpp)
 add_executable(ex0203 src/ex0203.cpp)
 add_executable(ex0301 src/ex0301.cpp)
+add_executable(ex0401 src/ex0401.cpp)
+add_executable(ex0402 src/ex0402.cpp)
+add_executable(assignment3 src/assignment3.cpp)
+add_executable(ex0501 src/ex0501.cpp)
+add_executable(ex0502 src/ex0502.cpp)
