--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,8 @@ add_executable(ex0402 src/ex0402.cpp)
 add_executable(assignment3 src/assignment3.cpp)
 add_executable(ex0501 src/ex0501.cpp)
 add_executable(ex0502 src/ex0502.cpp)
+add_executable(assignment4 src/assignment4.cpp)
+add_executable(ex0601 src/ex0601.cpp)
+add_executable(ex0602 src/ex0602.cpp)
+add_executable(ex0603 src/ex0603.cpp)
+add_executable(assignment5 src/assignment5.cpp)
