--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,5 @@ add_executable(ex0602 src/ex0602.cpp)
 add_executable(ex0603 src/ex0603.cpp)
 add_executable(assignment5 src/assignment5.cpp)
 add_executable(ex0701 src/ex0701.cpp)
+add_executable(assignment6 src/assignment6.cpp)
+add_executable(ex0801 src/ex0801.cpp)
